add_library(stubs OBJECT)
target_sources(stubs PRIVATE middleware.cc message_queue.cc)
if(MPSYNC_STUBS STREQUAL "linux")
    target_sources(stubs PRIVATE linux/middleware.cc)
    target_compile_definitions(stubs PRIVATE MPSYNC_STUBS_LINUX)
endif()
target_link_libraries(stubs INTERFACE rt)
target_include_directories(stubs PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_compile_options(stubs PRIVATE -Wall -Wextra -Werror)
target_compile_features(stubs PUBLIC cxx_std_11)
