add_library(stubs OBJECT)
target_sources(stubs PRIVATE middleware.cc message_queue.cc)
target_link_libraries(stubs INTERFACE rt PRIVATE tipc)
target_include_directories(stubs PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_compile_options(stubs PRIVATE -Wall -Wextra -Werror)
target_compile_features(stubs PUBLIC cxx_std_11)
